--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.app {
+  background: #6b469a;
+  padding: 50px;
+  height: 100vh;
+}
+
+.todo-list {
+  background: #e8e8e8;
+  padding: 5px;
+  max-width: 400px;
+}
